--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="/favicon.ico" rel="shortcut icon">
 
-    {% block css %}
-      <link rel="stylesheet" href="{{ get_url(path="site.css", trailing_slash=false) }}">
-    {% endblock css %}
+    <link rel="stylesheet" href="/site.css">
     <link href="//fonts.googleapis.com/css?family=Inconsolata&amp;display=swap" rel="stylesheet" type="text/css">
     <link href="//fonts.googleapis.com/css?family=Cabin+Sketch&amp;display=swap" rel="stylesheet" type="text/css">
     <link href="//fonts.googleapis.com/css?family=Open+Sans&amp;display=swap" rel="stylesheet" type="text/css">
