Do some restyling

--- a/templates/article.html
+++ b/templates/article.html
@@ -4,7 +4,7 @@
 
 {% block content %}
   <div class="uk-width-1-1 uk-first-column">
-    <h2 class="uk-text-center">{{ page.title }}</h2>
+    <h2 class>{{ page.title }}</h2>
   </div>
   <hr/>
   <div class="uk-width-1-1 uk-first-column uk-grid-margin">
