--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="/site.css">
     <link href="//fonts.googleapis.com/css?family=Inconsolata&amp;display=swap" rel="stylesheet" type="text/css">
-    <link href="//fonts.googleapis.com/css?family=Cabin+Sketch&amp;display=swap" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet"> 
     <link href="//fonts.googleapis.com/css?family=Open+Sans&amp;display=swap" rel="stylesheet" type="text/css">
     <link crossorigin="anonymous" href="//cdn.jsdelivr.net/npm/katex@0.10.2/dist/katex.min.css" integrity="sha384-yFRtMMDnQtDRO8rLpMIKrtPCD5jdktao2TV19YiZYWMDkUR5GQZR/NOVTdquEx1j" rel="stylesheet">
     
