--- a/templates/page.html
+++ b/templates/page.html
@@ -7,7 +7,8 @@
     <img src="/images/{{ page.extra["background_image"] }}"/>
   </div>
   <div class="uk-width-1-1 uk-first-column uk-grid-margin">
-    <h2 class="uk-text-center">{{ page.extra["subtitle"] }}</h2>
+    <h2>{{ page.extra["subtitle"] }}</h2>
   </div>
+  <hr/>
   {{ page.content | safe }}
 {% endblock content %}
