--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -6,9 +6,9 @@
   <div class="uk-width-1-1 uk-first-column">
     <img src="/images/{{ section.extra["background_image"] }}"/>
   </div>
-  <div class="uk-width-1-1 uk-first-column uk-grid-margin uk-text-center">
-    <h2 class="uk-text-center">{{ section.extra["subtitle"] }}</h2>
-
+  <div class="uk-width-1-1 uk-first-column uk-grid-margin">
+    <h2>{{ section.extra["subtitle"] }}</h2>
+    <hr/>
   {% set articles_2019 = get_section(path="articles/2019/_index.md") %}
 
   <ul class="articles">
