--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
     <script src="/js/highlight.js" type="text/javascript"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 
-    <script src="/js/quotes.js" type="text/javascript"></script>
+    <script src="/js/site.js" type="text/javascript"></script>
   </head>
   <body>
 
@@ -36,8 +36,10 @@
         </div>
       {% endblock content %}
     </main>
-    <div class="uk-width-1-1 uk-text-center footer">
-      <p class="quote"></p>
+    <div class="uk-container">
+      <div class="uk-width-1-1 uk-text-center footer">
+        <p class="quote"></p>
+      </div>
     </div>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
