--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,29 +1,69 @@
 <div class="uk-container uk-container-xsmall">
 <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar="">
-  <div class="uk-navbar-left">
-    <a class="uk-navbar-item uk-logo" href="/">道</a>
-    <ul class="uk-navbar-nav">
+
+  <div class="uk-navbar-left dd-mobile">
+    
+    <a id="mobile-navbar-toggle" class="uk-navbar-toggle" uk-navbar-toggle-icon href="#"></a>
+
+    <ul class="uk-navbar-nav dd-mobile-navbar" id="mobile-navbarmenu">
+
+      <li>
+        <a href="/" title="home">道</a>
+      </li>
 
       {% if current_path is matching("^articles/") %}<li class="uk-active">{% else %}<li>{% endif %}
-        <a class="dd-desktop" href="/articles" title="articles">articles</a>
+        <a href="/articles" title="articles">articles</a>
       </li>
       
       {% if current_path is matching("^projects/") %}<li class="uk-active">{% else %}<li>{% endif %}
-        <a class="dd-desktop" href="/projects" title="projects">projects</a>
+        <a href="/projects" title="projects">projects</a>
       </li>
       
       {% if current_path is matching("^research/") %}<li class="uk-active">{% else %}<li>{% endif %}
-        <a class="dd-desktop" href="/research" title="research">research</a>
+        <a href="/research" title="research">research</a>
       </li>
       
       {% if current_path is matching("^contact/") %}<li class="uk-active">{% else %}<li>{% endif %}
-        <a class="dd-desktop" href="/contact" title="contact">contact</a>
+        <a href="/contact" title="contact">contact</a>
       </li>
 
       {% if current_path is matching("^whoami/") %}<li class="uk-active">{% else %}<li>{% endif %}
-        <a class="dd-desktop" href="/whoami" title="who am i?">who am i?</a>
+        <a href="/whoami" title="who am i?">who am i?</a>
       </li>
+
     </ul>
+
   </div>
+
+  <div class="uk-navbar-left dd-desktop">
+
+    <a class="uk-navbar-item uk-logo" href="/">道</a>
+    
+    <ul class="uk-navbar-nav">
+
+      {% if current_path is matching("^articles/") %}<li class="uk-active">{% else %}<li>{% endif %}
+        <a href="/articles" title="articles">articles</a>
+      </li>
+      
+      {% if current_path is matching("^projects/") %}<li class="uk-active">{% else %}<li>{% endif %}
+        <a href="/projects" title="projects">projects</a>
+      </li>
+      
+      {% if current_path is matching("^research/") %}<li class="uk-active">{% else %}<li>{% endif %}
+        <a href="/research" title="research">research</a>
+      </li>
+      
+      {% if current_path is matching("^contact/") %}<li class="uk-active">{% else %}<li>{% endif %}
+        <a href="/contact" title="contact">contact</a>
+      </li>
+
+      {% if current_path is matching("^whoami/") %}<li class="uk-active">{% else %}<li>{% endif %}
+        <a href="/whoami" title="who am i?">who am i?</a>
+      </li>
+
+    </ul>
+
+  </div>
+
 </nav>
 </div>
