Add animated footer

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,12 @@
     </main>
     <div class="uk-container">
       <div class="uk-width-1-1 uk-text-center footer">
+        <div class="trail">
+          <p class="trail-step trail-step1">◰</p>
+          <p class="trail-step trail-step2">◱</p>
+          <p class="trail-step trail-step3">◲</p>
+          <p class="trail-step trail-step4">◳</p>
+        </div>
         <p class="quote"></p>
       </div>
     </div>
