--- a/sass/theme.css
+++ b/sass/theme.css
@@ -33,6 +33,9 @@ body, html {
     height: 100%;
 }
 
+.footer .trail {
+    display: none;
+}
 .footer .quote {
     display: none;
     margin-top: 20px;
@@ -69,6 +72,16 @@ blockquote:before {
   margin-right: 0.25em;
   vertical-align: -0.4em;
 }
+
+.trail-step {
+    padding: 0px;
+    margin: 0px;
+    display: none;
+}
+.trail-step1 { font-size: 6px; margin-top: 20px; }
+.trail-step2 { font-size: 8px; }
+.trail-step3 { font-size: 10px; }
+.trail-step4 { font-size: 12px; margin-bottom: 20px; }
 
 /* DESKTOP ONLY STYLES */
 .dd-desktop .uk-logo {
