--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
       {% block content %}
         <div class="uk-grid">
           <div class="uk-width-1-1">
-            <img id="home-image" src="/images/start-design-sm-bg.png"  title="picture of workdesk" />
+            <img id="workdesk-image" src="/images/start-design-sm-bg.png"  title="picture of workdesk" />
           </div>
         </div>
       {% endblock content %}
